# Thesis

./: .editorconfig  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLI_USAGE.md  CODEBASE_OVERVIEW.md  CONFIG_SUMMARY.md  DEBUG_MULTIRUN_PROMPT.md  HPC_REPORT_COMMANDS.md  METADATA_SCHEMA.md  MULTIRUN_FIX_SUMMARY.md  QUICK_REPORT_COMMANDS.md  QUICK_VQ_COMMANDS.md  README.md  REFactor_NOTES.md  REPORTS_GUIDE.md  REPORTS_IMPORT_CHECK.md  REPORTS_REFACTOR_SUMMARY.md  REPORT_GUIDE.md  TRAINING_GUIDE.md  VALIDATION_COMMANDS.md  VQ_TRAINING_COMMANDS.md  backfill_report_hpc.md  environment.yml  phase2_upload_log.csv  pyproject.toml  quickpush.ps1  test_shape_validation.py  usage-2026-02-04.txt
agent_reference/: README.md
configs/: config.yaml
docs/: ARCHITECTURE.md  AXES_AUDIT_LOG.md  AXES_REFERENCE.md  AXES_REFERENCE_V2.md  COMMANDS.md  ENV_AND_DATA.md  SCRIPTS.md  thesis_execution_plan_066bfb22.plan.md  thesis_run_completeness_cli.md
experiments/: builtjes_baseline_commands.sh
hpc/: submit_ch8_candidates.sh  submit_ch8_optuna.sh  submit_ch8_optuna_reeval.sub
notebooks/: 00_driver.ipynb  analyze_1v1_for_all_datatypes.ipynb  analyze_4t_vs_background_positional.ipynb  analyze_positionalencoding_and_modelsize.ipynb  analyze_regularization_sweep.ipynb  check_autoencoder_model.ipynb  check_transformer_model.ipynb  data_exploration.ipynb  explore_effects_positional_encoding.ipynb
scripts/: backfill_meta.py  check_ids.py  check_logging_import.py  check_run_completeness.py  cleanup_wandb.py  create_binned_dataset.py  (+8 more)
(+729 files in other folders)
